Tue Dec  5 19:44:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-freebsd.h:
          Simplified ACE_HAS_SNPRINTF setting

        * ace/config-irix6.x-common.h:
        * ace/config-sco-5.0.0-mit-pthread.h:
        * ace/config-tru64.h:
          Removed commented out defines, makes it easier to search whether
          a macro is defined in any config file or not

        * ace/config-tru64.h:
          Use config-posix.h

        * ace/Read_Buffer.{h,cpp}:
          Changed close_on_delete to a real bool

        * ace/Service_Config.{h,inl}:
        * ace/Service_Gestalt.{h,cpp,inl}:
          Use bool for the ignore arguments

        * ace/SOCK_Dgram.inl:
          Const change

Tue Dec  5 15:47:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/makeinclude/platform_osf1_3.2_cxx.GNU:
        * include/makeinclude/makeinclude/platform_osf1_4.x_cxx.GNU:
        * include/makeinclude/makeinclude/platform_osf1_4.x_g++.GNU:
        * include/makeinclude/makeinclude/platform_osf1_4.x_rcc.GNU:
          Removed, very old

        * include/makeinclude/makeinclude/platform_tru64_cxx.GNU:
        * include/makeinclude/makeinclude/platform_tru64_g++.GNU:
          We should be able to build on tru64 but it isn't really maintained,
          moved the contents of the osf files into these files

Tue Dec  5 15:22:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/makeinclude/platform_aix4_cset++.GNU:
        * include/makeinclude/makeinclude/platform_aix.GNU:
          Moved contents of cset++ method into the aix one, the aix
          file just included the first one

        * include/makeinclude/makeinclude/platform_aix4.2.GNU:
          Removed, old

        * ace/config-aix-4.x.h:
        * ace/config-aix-5.x.h:
          Moved contents of 4.x.h file into the 5.x.h file. Removed a lot
          of old checks for AIX 4 so that we can maintain things easier.
